src/test/deca/syntax/valid/cast_pars_01.deca
// Description:
//    Programme minimaliste utilisant un commentaire.
//
// Resultats:
//
//
// Historique:
//    cree le 04/01/2023

{
    Object obj = 1;
    int obj_ent = (int) 1;
}