src/test/deca/syntax/invalid/print_parent_pars_01.deca
// Description:
//    Programme minimaliste qui teste la terminaison d'un print.
//
// Resultats:
//      Erreur ligne 11:
//
// Historique:
//    cree le 01/01/2023

{
     print(;
}